<resources>
    <string name="app_name">疾控温湿度填报助手</string>
    <string name="action_settings">设置</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">温湿度测量</string>
    <string name="second_fragment_label">报告历史</string>
    <string name="next">下一步</string>
    <string name="previous">返回测量</string>
    <string name="measurement_title">现场温湿度测量</string>
    <string name="status_idle">待测量。点击一键测量开始。</string>
    <string name="start_measurement">一键测量</string>
    <string name="environment_parameters">环境参数</string>
    <string name="refresh_data">刷新数据</string>
    <string name="temperature_placeholder">--.-℃</string>
    <string name="humidity_placeholder">--%RH</string>
    <string name="pressure_placeholder">--</string>
    <string name="temperature_label">温度</string>
    <string name="humidity_label">湿度</string>
    <string name="pressure_label">气压</string>
    <string name="temperature_unit">℃</string>
    <string name="humidity_unit">%</string>
    <string name="pressure_unit">kPa</string>
    <string name="confidence_placeholder">置信度：--</string>
    <string name="source_placeholder">来源：--</string>
    <string name="quality_placeholder">质控：--</string>
    <string name="point_report_title">点位报告</string>
    <string name="measurement_meta_title">测量摘要</string>
    <string name="point_name_label">点位名称</string>
    <string name="point_name_hint">点位名称</string>
    <string name="voice_point">语音点位</string>
    <string name="save_report">保存报告</string>
    <string name="report_history">报告历史</string>
    <string name="nav_home">首页</string>
    <string name="nav_tasks">任务</string>
    <string name="nav_supplies">物资</string>
    <string name="nav_sampling">采样</string>
    <string name="nav_more">更多</string>
    <string name="placeholder_blank"> </string>
    <string name="history_empty">暂无本地报告。</string>
    <string name="copy_preview_empty">选择或复制最近一条报告后，这里会显示待复制文本。</string>
    <string name="copy_latest">复制最近一条</string>
    <string name="network_demo">网络演示（httpbin）</string>
    <string name="network_demo_empty">网络演示未触发。该功能只验证网络请求，不代表提交疾控系统。</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
